--- a/conference/ebplane2019/xdp-bpf-building-blocks.org
+++ b/conference/ebplane2019/xdp-bpf-building-blocks.org
@@ -163,7 +163,7 @@ Please userspace apps: *Everybody should use this library*
 
 ** Slide: eBPF concepts: /context/, /maps/ and /helpers/            :export:
 
-Each eBPF runtime event hook gets a *pointer to a* /context/ struct
+Each eBPF /runtime event hook/ gets a *pointer to a* /context/ struct
 - BPF bytecode has access to context (read/write limited)
   * verifier may adjust the bytecode for safety
 
@@ -224,7 +224,7 @@ The killer feature of XDP is integration with Linux kernel,
 
 /AF_XDP/ for /flexible/ *kernel bypass*
  - Cooperate with use-cases needing fast raw frame access in userspace
- - While leveraging existing kernel NIC drivers
+ - No kernel reinject, instead choose before doing XDP_REDIRECT
 
 ** Slide: Simple view on how XDP gains speed                        :export:
 
